set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_library(geneticAlgorithm GeneticAlgorithm.cpp)
target_link_libraries(geneticAlgorithm fieldCore)
target_link_libraries(geneticAlgorithm boundaryCore)
target_link_libraries(geneticAlgorithm commonCore)
target_link_libraries(geneticAlgorithm frequencyDomainCore)
target_link_libraries(geneticAlgorithm visualCore)
add_subdirectory(unit_test)